fixing the z-index as canvas charts were showing above the modalwindow

--- a/webroot/css/thickbox.css
+++ b/webroot/css/thickbox.css
@@ -32,6 +32,7 @@
 	left: 0px;
 	height:100%;
 	width:100%;
+	z-index: 1000;
 }
 
 .TB_overlayMacFFBGHack {
